--- a/Magicball/index.html
+++ b/Magicball/index.html
@@ -12,7 +12,7 @@
 <body>
   <div id="app">
     <div class="app-magic-ball">
-      <button v-on:click.prevent="btnClick"><img src="/images/tmb_157877_1357.jpg" alt="magic ball"></button>
+      <button v-on:click.prevent="btnClick"><img src="./images/tmb_157877_1357.jpg" alt="magic ball"></button>
     </div>
     <div class="btn-block">
       <button v-on:click.prevent="btnClick" class="btn">Click on me!!!</button>
