--- a/Magicball/index.html
+++ b/Magicball/index.html
@@ -13,7 +13,7 @@
 <body>
   <div id="app">
     <div class="app-magic-ball">
-      <button v-on:click.prevent="btnClick" class="animate__animated animate__pulse"><img src="/images/tmb_157877_1357.jpg" alt="magic ball"></button>
+      <button v-on:click.prevent="btnClick" class="animate__animated animate__pulse"><img src="./images/tmb_157877_1357.jpg" alt="magic ball"></button>
     </div>
     <div class="prediction-response-block">
       <div class="prediction-response">
