--- a/site_new_building/index.html
+++ b/site_new_building/index.html
@@ -20,7 +20,7 @@
     <header>
         <div class="header__block">
             <div class="header__nav_block">
-                <div class="header__logo"><img src="/images/HouseVOP.png" alt="logo"><p>житловий комплекс</p></div>
+                <div class="header__logo"><img src="./images/HouseVOP.png" alt="logo"><p>житловий комплекс</p></div>
                 <div class="header__nav">
                     <div><a href="#">Про комплекс</a></div>
                     <div><a href="#">Район</a></div>
@@ -32,10 +32,10 @@
         </div>
         <div class="content_wrapper">
             <div class="header__content_block"><h1>Житловий комплекс в історичному центрі</h1></div>
-            <div class="mouseIcon"><img src="/images/Vector.png" alt="mous icon"></div>
+            <div class="mouseIcon"><img src="./images/Vector.png" alt="mous icon"></div>
             <div class="contacts__wrapper">
-                <div class="location"><img src="/images/Vector location.png" alt="icon location"> Дніпровська наб 24/8</div>
-                <div class="tel"><img src="/images/Vector phone.png" alt="icon phone"> +38 (099) 999-99-99</div>
+                <div class="location"><img src="./images/Vector location.png" alt="icon location"> Дніпровська наб 24/8</div>
+                <div class="tel"><img src="./images/Vector phone.png" alt="icon phone"> +38 (099) 999-99-99</div>
             </div>
         </div>
     </header>
@@ -43,20 +43,20 @@
     <section class="loft__section">
         <div class="section__content_wrapper">
             <div class="loft__icons_block">
-                <div class="bench"><img src="/images/bench.png" alt="bench"><p>Поруч історичні парки та сквери</p></div>
-                <div class="building"><img src="/images/building.png" alt="building"><p>Повністю облаштовано</p></div>
-                <div class="fountein"><img src="/images/fountain.png" alt="fountein"><p>10 фонтанів на території</p></div>
-                <div class="bicycle"><img src="/images/bicycle.png" alt="bicycle"><p>6 км велодоріжок</p></div>
+                <div class="bench"><img src="./images/bench.png" alt="bench"><p>Поруч історичні парки та сквери</p></div>
+                <div class="building"><img src="./images/building.png" alt="building"><p>Повністю облаштовано</p></div>
+                <div class="fountein"><img src="./images/fountain.png" alt="fountein"><p>10 фонтанів на території</p></div>
+                <div class="bicycle"><img src="./images/bicycle.png" alt="bicycle"><p>6 км велодоріжок</p></div>
             </div>
             <div class="text_opacty_2">II</div>
                 <div class="h2style"><h2>Наші квартири</h2></div> 
                     <div class="text_opacty_3">III</div>
 
             <div class="loft__galery">
-                <a href="#"><p>Лофт - 3 поверх</p><img src="/images/image-loft1.png" alt="loft1"></a>
-                <a href="#"><p>Лофт - 2 поверх</p><img src="/images/image-loft2.png" alt="loft2"></a>
-                <a href="#"><p>Лофт - 3 поверх</p><img src="/images/image-loft1.png" alt="loft1"></a>
-                <a href="#"><p>Лофт - 2 поверх</p><img src="/images/image-loft2.png" alt="loft2"></a>
+                <a href="#"><p>Лофт - 3 поверх</p><img src="./images/image-loft1.png" alt="loft1"></a>
+                <a href="#"><p>Лофт - 2 поверх</p><img src="./images/image-loft2.png" alt="loft2"></a>
+                <a href="#"><p>Лофт - 3 поверх</p><img src="./images/image-loft1.png" alt="loft1"></a>
+                <a href="#"><p>Лофт - 2 поверх</p><img src="./images/image-loft2.png" alt="loft2"></a>
             </div>
         </div>
     </section>
@@ -116,7 +116,7 @@
     <footer class="footer">
         <div class="section__content_wrapper footer_wrap">
             <div class="footer__block logo">
-                <img src="/images/HouseVOP.png" alt="logo">
+                <img src="./images/HouseVOP.png" alt="logo">
                 <p>житловий комплекс</p>
             </div>
 
@@ -140,9 +140,9 @@
                 <p>Відділ продажу: 10:00-20:00</p>
                 <p>E-mail: <span class="colortext">vophouse@gmail.com</span></p>
                 <div class="social">
-                    <a href="#"><img src="/images/VectorYouTube.png" alt="YouTube"></a>
-                    <a href="#"><img src="/images/Vector Fb.png" alt="Fb"></a>
-                    <a href="#"><img src="/images/instagram.png" alt="nstagram"></a>
+                    <a href="#"><img src="./images/VectorYouTube.png" alt="YouTube"></a>
+                    <a href="#"><img src="./images/Vector Fb.png" alt="Fb"></a>
+                    <a href="#"><img src="./images/instagram.png" alt="nstagram"></a>
                 </div>
             </div>
         </div>
